:memo: Add documentation for Show Opening
